<resources>
    <string name="app_name">Interview Android Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Inventory</string>
    <string name="second_fragment_label">Create new product</string>
    <string name="create">CREATE</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="scan">scan</string>
    <string name="scan_details">Scan details</string>
    <string name="product_name">Product name</string>
    <string name="pdt_name">Product name</string>
    <string name="product_code">Product Code</string>
    <string name="category">Category</string>
    <string name="agro_chemicals">Agro chemicals</string>
    <string name="product_type">Product Type</string>
    <string name="body_text_1">Body Text 1</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="distributor">Distributor</string>
    <string name="vat_16">Vat 16%</string>
    <string name="unitc_cost">Unit Cost</string>
    <string name="retail_price">Retail Price</string>
    <string name="agent_price">Agent Price</string>
    <string name="whole_sale_price">Whole Sale Price</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="equipment">Equipment</string>
    <string name="very_effective">Very Effective</string>
    <string name="_8904">(8904)</string>
    <string name="dash">-</string>
    <string name="microbes">Microbes</string>
    <string name="_25kg">25kg</string>
    <string name="mea_ltd">Mea ltd.</string>
    <string name="_1200_units">1200 Units</string>
    <string name="iprocure">iProcure</string>
    <string name="no_data_available">No data available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>